# Funput

./: .gitignore  Cargo.toml  README.en.md  README.md
.claude/skills/slint/: SKILL.md
.github/workflows/: build-linux.yml  publish-repo.yml  release.yml
benchmarks/: .gitignore  README.md  fetch-corpus.sh  sample.txt
crates/funput-cli/: Cargo.toml  README.md
crates/funput-cli/src/: cli.rs  coverage.rs  encode.rs  main.rs  sim.rs
crates/funput-core/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/funput-core/benches/: apply.rs
crates/funput-core/src/: lib.rs
crates/funput-core/src/composition/: apply.rs  mod.rs  revert.rs  transform.rs
crates/funput-core/src/input_method/: mod.rs  telex.rs  vni.rs
crates/funput-core/src/unicode/: marks.rs  mod.rs  shapes.rs  tone_position.rs  vowels.rs
crates/funput-core/src/validation/: mod.rs  parse.rs  (+2 more)
crates/funput-core/tests/: spellcheck_corpus.rs  telex_basic.rs  vni_basic.rs  vni_fixtures.rs
crates/funput-desktop/: Cargo.toml  README.md
crates/funput-engine/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/funput-engine/benches/: process_char.rs
crates/funput-engine/src/: boundary.rs  diff.rs  lib.rs  pipeline.rs  result.rs  session.rs
crates/funput-engine/tests/: stroke_position.rs  tone_placement.rs
crates/funput-ffi/: Cargo.toml  README.md
crates/funput-ffi/benches/: latency.rs
crates/funput-ffi/include/: funput.h
crates/funput-ffi/src/: lib.rs
crates/funput-term/: Cargo.toml  README.md
crates/funput-term/src/: app.rs  config.rs  input.rs  install.rs  main.rs  state.rs  term.rs
(+3 files in other folders)
